--- a/css/styles.css
+++ b/css/styles.css
@@ -48,8 +48,7 @@
     background-color: #18242e;
   }
   ul {
-    margin-block-start: 0em;
-    margin-block-end: 1em;
+    
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     padding-inline-start: 40px;
@@ -57,5 +56,49 @@
     justify-content: space-between;
     padding: 2.5rem;
     list-style-type: none;
-}
+    margin-block-start: 0em; 
+  }
+  .generic-content.bleed {
+    padding: 0;
+    max-width: initial;
+    width: 100%;
+    border: none;
+    background-color: transparent;
+    margin: 0;
+  }
+    div {
+    display: block;
+    }
+  #homepage-hero {
+    height: 25.5rem;
+  }
+  .generic-content {
+    margin: 3rem;
+    border-width: 1px 0;
+    text-align: center;
+  }
+  img {
+    max-width: inherit;
+    max-height: inherit;
+    height: inherit;
+    width: inherit;
+  }
+  .parent {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    display: flex;
+  }
+  .background {
+    width: 100%; 
+    height: 100%; 
+    position: fixed; 
+    left: 0px; 
+    top: 0px; 
+    z-index: -1; /* Ensure div tag stays behind content; -999 might work, too. */
+  }
+  .stretch {
+    width:100%;
+    height:100%;
+  } 
 
